Add restaurant search functionality and improve styles

--- a/components/dining-night-life-delivery/main-template.html
+++ b/components/dining-night-life-delivery/main-template.html
@@ -108,6 +108,12 @@
     <div class="banner wrapper">
         <img alt="banner" src="https://b.zmtcdn.com/data/o2_assets/e067a1cf0d3fe27b366402b98b994e9f1716296909.png">
     </div>
+    <div class="restaurant-search wrapper">
+        <div class="search-input-container">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input type="text" placeholder="Search for restaurant name...">
+        </div>
+    </div>
     <div class="restaurants wrapper">
     </div>
     <div class="end-of-search">
